Bug 250269. Outlines not getting painted on buttons, radios, checkboxes, tables and table cells. r+sr=roc