layout/html/forms/src/nsFormControlFrame.cpp
@@ -550,6 +550,8 @@ nsFormControlFrame::Reflow(nsPresContext*          aPresContext,
   aStatus = NS_FRAME_COMPLETE;
   SetupCachedSizes(mCacheSize, mCachedAscent, mCachedMaxElementWidth, aDesiredSize);
   NS_FRAME_SET_TRUNCATION(aStatus, aReflowState, aDesiredSize);
+  nsRect overflowStartRect(0, 0, aDesiredSize.width, aDesiredSize.height);
+  FinishAndStoreOverflow(&overflowStartRect, overflowStartRect.Size());
   return rv;
 }
 
