layout/tables/nsTableRowFrame.cpp
@@ -562,6 +562,14 @@ NS_METHOD nsTableRowFrame::Paint(nsPresContext*      aPresContext,
   }
   PaintChildren(aPresContext, aRenderingContext, aDirtyRect,
                 aWhichLayer, aFlags);
+
+  // Paint outline
+  nsRect rect(0, 0, mRect.width, mRect.height);
+  const nsStyleOutline* outlineStyle = GetStyleOutline();
+  const nsStyleBorder* borderStyle  = GetStyleBorder();
+  nsCSSRendering::PaintOutline(aPresContext, aRenderingContext, this,
+                               aDirtyRect, rect, *borderStyle, *outlineStyle,
+                               mStyleContext, 0);
   if (clip)
     aRenderingContext.PopState();
   return NS_OK;
